Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2.3
-
None
-
10.0.30
Description
Logging: mtr galera.galera_many_tables_nopk
|
...
|
2017-01-27 12:11:30 140121873573632 [Note] WSREP: 1.0 (nirbhay-vbox): State transfer from 0.0 (nirbhay-vbox) complete.
|
2017-01-27 12:11:30 140121873573632 [Note] WSREP: Member 1.0 (nirbhay-vbox) synced with group.
|
2017-01-27 12:13:14 140121680615168 [ERROR] InnoDB: tried to purge non-delete-marked record in index `ID_IND` of table `SYS_TABLES`: tuple: TUPLE (info_bits=0, 2 fields): {[8] 1(0x0000000000000301),[9]test/t102(0x040503040F04010002)}, record: RECORD(info_bits=0, 2 fields): {[8] 1(0x0000000000000301),[9]test/t102(0x040503040F04010002)}
|
2017-01-27 12:13:14 0x7f709eff9700 InnoDB: Assertion failure in file /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc line 498
|
InnoDB: Failing assertion: 0
|
InnoDB: We intentionally generate a memory trap.
|
InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
|
InnoDB: If you get repeated assertion failures or crashes, even
|
InnoDB: immediately after the mysqld startup, there may be
|
InnoDB: corruption in the InnoDB tablespace. Please refer to
|
InnoDB: http://dev.mysql.com/doc/refman/5.7/en/forcing-innodb-recovery.html
|
InnoDB: about forcing recovery.
|
170127 12:13:14 [ERROR] mysqld got signal 6 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
...
|
Thread 1 (Thread 0x7f709eff9700 (LWP 18808)):
|
#0 __pthread_kill (threadid=<optimized out>, signo=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:62
|
#1 0x000055b41eec793f in my_write_core (sig=6) at /home/nirbhay/project/git-repo/mariadb/10.2/mysys/stacktrace.c:477
|
#2 0x000055b41e734bca in handle_fatal_signal (sig=6) at /home/nirbhay/project/git-repo/mariadb/10.2/sql/signal_handler.cc:296
|
#3 <signal handler called>
|
#4 0x00007f70b4bbe428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
|
#5 0x00007f70b4bc002a in __GI_abort () at abort.c:89
|
#6 0x000055b41ecddbe8 in ut_dbg_assertion_failed (expr=0x55b41f1313bf "0", file=0x55b41f131a68 "/home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc", line=498) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/ut/ut0dbg.cc:59
|
#7 0x000055b41ec239c8 in row_purge_remove_sec_if_poss_leaf (node=0x7f70b03ddc88, index=0x7f70afbf4288, entry=0x7f70a98faa88) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc:498
|
#8 0x000055b41ec23d08 in row_purge_remove_sec_if_poss (node=0x7f70b03ddc88, index=0x7f70afbf4288, entry=0x7f70a98faa88) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc:587
|
#9 0x000055b41ec23f16 in row_purge_del_mark (node=0x7f70b03ddc88) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc:657
|
#10 0x000055b41ec24a85 in row_purge_record_func (node=0x7f70b03ddc88, undo_rec=0x7f70b0bf3218 "\001\270\016\002\001", thr=0x7f70b4087c90, updated_extern=false) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc:975
|
#11 0x000055b41ec24cdc in row_purge (node=0x7f70b03ddc88, undo_rec=0x7f70b0bf3218 "\001\270\016\002\001", thr=0x7f70b4087c90) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc:1031
|
#12 0x000055b41ec24f85 in row_purge_step (thr=0x7f70b4087c90) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/row/row0purge.cc:1110
|
#13 0x000055b41ebaeeca in que_thr_step (thr=0x7f70b4087c90) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/que/que0que.cc:1056
|
#14 0x000055b41ebaf0cc in que_run_threads_low (thr=0x7f70b4087c90) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/que/que0que.cc:1118
|
#15 0x000055b41ebaf27e in que_run_threads (thr=0x7f70b4087c90) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/que/que0que.cc:1158
|
#16 0x000055b41ec74ae3 in srv_task_execute () at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/srv/srv0srv.cc:2655
|
#17 0x000055b41ec74c61 in srv_worker_thread (arg=0x0) at /home/nirbhay/project/git-repo/mariadb/10.2/storage/innobase/srv/srv0srv.cc:2705
|
#18 0x00007f70b57fa6ba in start_thread (arg=0x7f709eff9700) at pthread_create.c:333
|
#19 0x00007f70b4c8f82d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
|
...
|
Failing test(s): galera.galera_many_tables_nopk
|
galera.galera_many_tables_pk is affected too.
Attachments
Issue Links
- duplicates
-
MDEV-11894 Galera crashes after a few minutes - unusable
-
- Closed
-
-
MDEV-13056 The server keeps crashing
-
- Closed
-
- is caused by
-
MDEV-11585 Hard-code the shared InnoDB temporary tablespace ID
-
- Closed
-
- is duplicated by
-
MDEV-11843 MariaDB Server Fail - "Has Gone Away" & fail to restart
-
- Closed
-
- relates to
-
MDEV-11894 Galera crashes after a few minutes - unusable
-
- Closed
-
Fix for crash, but please review other conditions:
diff --git a/storage/innobase/include/fsp0space.h b/storage/innobase/include/fsp0space.h
index 6ecca6211ed..827a0e93f7d 100644
--- a/storage/innobase/include/fsp0space.h
+++ b/storage/innobase/include/fsp0space.h
@@ -205,7 +205,7 @@ class Tablespace {
@return true if undo tablespace */
static bool is_undo_tablespace(ulint id)
{
- return(id <= srv_undo_tablespaces_open);
+ return(id == SRV_TMP_SPACE_ID);
}
private:
/**